--- a/modules.html
+++ b/modules.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;ScopedDynameh&quot; | Dynameh</title>
+	<title>Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
+	<script async src="assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.json" data-base="..">
+				<div class="table-cell" id="tsd-search" data-index="assets/js/search.json" data-base=".">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -22,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">Dynameh</a>
+					<a href="index.html" class="title">Dynameh</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -49,15 +48,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<ul class="tsd-breadcrumb">
-				<li>
-					<a href="../globals.html">Globals</a>
-				</li>
-				<li>
-					<a href="_scopeddynameh_.html">&quot;ScopedDynameh&quot;</a>
-				</li>
-			</ul>
-			<h1>Module &quot;ScopedDynameh&quot;</h1>
+			<h1>Dynameh</h1>
 		</div>
 	</div>
 </header>
@@ -69,9 +60,22 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Interfaces</h3>
+							<h3>Modules</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a></li>
+								<li class="tsd-kind-module"><a href="modules/condition.html" class="tsd-kind-icon">Condition</a></li>
+								<li class="tsd-kind-module"><a href="modules/scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a></li>
+								<li class="tsd-kind-module"><a href="modules/tableschema.html" class="tsd-kind-icon">Table<wbr>Schema</a></li>
+								<li class="tsd-kind-module"><a href="modules/updateexpressionaction.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a></li>
+								<li class="tsd-kind-module"><a href="modules/batchhelper.html" class="tsd-kind-icon">batch<wbr>Helper</a></li>
+								<li class="tsd-kind-module"><a href="modules/concurrenthelper.html" class="tsd-kind-icon">concurrent<wbr>Helper</a></li>
+								<li class="tsd-kind-module"><a href="modules/dynamodbreservedwords.html" class="tsd-kind-icon">dynamo<wbr>DbReserved<wbr>Words</a></li>
+								<li class="tsd-kind-module"><a href="modules/index.html" class="tsd-kind-icon">index</a></li>
+								<li class="tsd-kind-module"><a href="modules/queryhelper.html" class="tsd-kind-icon">query<wbr>Helper</a></li>
+								<li class="tsd-kind-module"><a href="modules/requestbuilder.html" class="tsd-kind-icon">request<wbr>Builder</a></li>
+								<li class="tsd-kind-module"><a href="modules/requestunwrapper.html" class="tsd-kind-icon">request<wbr>Unwrapper</a></li>
+								<li class="tsd-kind-module"><a href="modules/responseunwrapper.html" class="tsd-kind-icon">response<wbr>Unwrapper</a></li>
+								<li class="tsd-kind-module"><a href="modules/scanhelper.html" class="tsd-kind-icon">scan<wbr>Helper</a></li>
+								<li class="tsd-kind-module"><a href="modules/validation.html" class="tsd-kind-icon">validation</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,58 +85,55 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class="current ">
+						<a href="modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
-					</li>
-					<li class="current tsd-kind-module">
-						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="modules/condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="modules/scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="modules/tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="modules/updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="modules/batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="modules/concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_index_.html">&quot;index&quot;</a>
+						<a href="modules/dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="modules/index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="modules/queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="modules/requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="modules/requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="modules/responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_validation_.html">&quot;validation&quot;</a>
+						<a href="modules/scanhelper.html">scan<wbr>Helper</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="modules/validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
@@ -158,6 +159,6 @@
 	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
-<script src="../assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
