--- a/modules/dynamodbreservedwords.html
+++ b/modules/dynamodbreservedwords.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Dynameh</title>
+	<title>dynamoDbReservedWords | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="assets/js/search.json" data-base=".">
+				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.json" data-base="..">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -22,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">Dynameh</a>
+					<a href="../index.html" class="title">Dynameh</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,10 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
+				</li>
+				<li>
+					<a href="dynamodbreservedwords.html">dynamoDbReservedWords</a>
 				</li>
 			</ul>
-			<h1>Dynameh</h1>
+			<h1>Module dynamoDbReservedWords</h1>
 		</div>
 	</div>
 </header>
@@ -66,24 +68,34 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Modules</h3>
+							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-module"><a href="modules/_condition_.html" class="tsd-kind-icon">&quot;<wbr>Condition&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_scopeddynameh_.html" class="tsd-kind-icon">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_tableschema_.html" class="tsd-kind-icon">&quot;<wbr>Table<wbr>Schema&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_updateexpressionaction_.html" class="tsd-kind-icon">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_batchhelper_.html" class="tsd-kind-icon">&quot;batch<wbr>Helper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_concurrenthelper_.html" class="tsd-kind-icon">&quot;concurrent<wbr>Helper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_queryhelper_.html" class="tsd-kind-icon">&quot;query<wbr>Helper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">&quot;request<wbr>Builder&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">&quot;request<wbr>Unwrapper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_responseunwrapper_.html" class="tsd-kind-icon">&quot;response<wbr>Unwrapper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_scanhelper_.html" class="tsd-kind-icon">&quot;scan<wbr>Helper&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_validation_.html" class="tsd-kind-icon">&quot;validation&quot;</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="dynamodbreservedwords.html#dynamodbreservedwords-1" class="tsd-kind-icon">dynamo<wbr>DbReserved<wbr>Words</a></li>
 							</ul>
 						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-module">
+					<a name="dynamodbreservedwords-1" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> dynamo<wbr>DbReserved<wbr>Words</h3>
+					<div class="tsd-signature tsd-kind-icon">dynamo<wbr>DbReserved<wbr>Words<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = ...</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/dynamoDbReservedWords.ts#L5">dynamoDbReservedWords.ts:5</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The following keywords are reserved for use by DynamoDB. Do not use any of these words as attribute names in expressions.</p>
+						</div>
+						<dl class="tsd-comment-tags">
+							<dt>see</dt>
+							<dd><p><a href="http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/ReservedWords.html">http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/ReservedWords.html</a></p>
+							</dd>
+						</dl>
 					</div>
 				</section>
 			</section>
@@ -91,55 +103,58 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals current ">
-						<a href="globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="concurrenthelper.html">concurrent<wbr>Helper</a>
+					</li>
+					<li class="current tsd-kind-module">
+						<a href="dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_index_.html">&quot;index&quot;</a>
+						<a href="queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
-					</li>
-					<li class=" tsd-kind-module">
-						<a href="modules/_validation_.html">&quot;validation&quot;</a>
+						<a href="validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-variable tsd-parent-kind-module">
+						<a href="dynamodbreservedwords.html#dynamodbreservedwords-1" class="tsd-kind-icon">dynamo<wbr>DbReserved<wbr>Words</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -165,6 +180,6 @@
 	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
-<script src="assets/js/main.js"></script>
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
