--- a/modules/tableschema.html
+++ b/modules/tableschema.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;TableSchema&quot; | Dynameh</title>
+	<title>TableSchema | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,13 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="_tableschema_.html">&quot;TableSchema&quot;</a>
+					<a href="tableschema.html">TableSchema</a>
 				</li>
 			</ul>
-			<h1>Module &quot;TableSchema&quot;</h1>
+			<h1>Module TableSchema</h1>
 		</div>
 	</div>
 </header>
@@ -71,7 +70,7 @@
 						<section class="tsd-index-section ">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-kind-icon">Table<wbr>Schema</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/tableschema.tableschema-1.html" class="tsd-kind-icon">Table<wbr>Schema</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,57 +80,57 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_index_.html">&quot;index&quot;</a>
+						<a href="index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_validation_.html">&quot;validation&quot;</a>
+						<a href="validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="../interfaces/_tableschema_.tableschema.html" class="tsd-kind-icon">Table<wbr>Schema</a>
+						<a href="../interfaces/tableschema.tableschema-1.html" class="tsd-kind-icon">Table<wbr>Schema</a>
 					</li>
 				</ul>
 			</nav>
