--- a/interfaces/condition.condition-1.html
+++ b/interfaces/condition.condition-1.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,13 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="../modules/_condition_.html">&quot;Condition&quot;</a>
+					<a href="../modules/condition.html">Condition</a>
 				</li>
 				<li>
-					<a href="_condition_.condition.html">Condition</a>
+					<a href="condition.condition-1.html">Condition</a>
 				</li>
 			</ul>
 			<h1>Interface Condition</h1>
@@ -95,10 +94,10 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#attribute" class="tsd-kind-icon">attribute</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#not" class="tsd-kind-icon">not</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#operator" class="tsd-kind-icon">operator</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_condition_.condition.html#values" class="tsd-kind-icon">values</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="condition.condition-1.html#attribute" class="tsd-kind-icon">attribute</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="condition.condition-1.html#not" class="tsd-kind-icon">not</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="condition.condition-1.html#operator" class="tsd-kind-icon">operator</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="condition.condition-1.html#values" class="tsd-kind-icon">values</a></li>
 							</ul>
 						</section>
 					</div>
@@ -112,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/Condition.ts#L16">Condition.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/Condition.ts#L16">Condition.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -135,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">not<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/Condition.ts#L21">Condition.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/Condition.ts#L21">Condition.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -147,10 +146,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="operator" class="tsd-anchor"></a>
 					<h3>operator</h3>
-					<div class="tsd-signature tsd-kind-icon">operator<span class="tsd-signature-symbol">:</span> <a href="../modules/_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a></div>
+					<div class="tsd-signature tsd-kind-icon">operator<span class="tsd-signature-symbol">:</span> <a href="../modules/validation.html#dynamoconditionoperator" class="tsd-signature-type" data-tsd-kind="Type alias">DynamoConditionOperator</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/Condition.ts#L29">Condition.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/Condition.ts#L29">Condition.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -172,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/Condition.ts#L36">Condition.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/Condition.ts#L36">Condition.ts:36</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -188,50 +187,50 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="../modules/_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="../modules/condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="../modules/scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="../modules/tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="../modules/updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="../modules/batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="../modules/concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="../modules/dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_index_.html">&quot;index&quot;</a>
+						<a href="../modules/index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="../modules/queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="../modules/requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="../modules/requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="../modules/responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="../modules/scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_validation_.html">&quot;validation&quot;</a>
+						<a href="../modules/validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
@@ -240,19 +239,19 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-module">
-						<a href="_condition_.condition.html" class="tsd-kind-icon">Condition</a>
+						<a href="condition.condition-1.html" class="tsd-kind-icon">Condition</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_condition_.condition.html#attribute" class="tsd-kind-icon">attribute</a>
+								<a href="condition.condition-1.html#attribute" class="tsd-kind-icon">attribute</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_condition_.condition.html#not" class="tsd-kind-icon">not</a>
+								<a href="condition.condition-1.html#not" class="tsd-kind-icon">not</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_condition_.condition.html#operator" class="tsd-kind-icon">operator</a>
+								<a href="condition.condition-1.html#operator" class="tsd-kind-icon">operator</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_condition_.condition.html#values" class="tsd-kind-icon">values</a>
+								<a href="condition.condition-1.html#values" class="tsd-kind-icon">values</a>
 							</li>
 						</ul>
 					</li>
