--- a/interfaces/updateexpressionaction.updateexpressionlistprepend.html
+++ b/interfaces/updateexpressionaction.updateexpressionlistprepend.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>UpdateExpressionNumberSubtract | Dynameh</title>
+	<title>UpdateExpressionListPrepend | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,16 +50,16 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="../modules/_updateexpressionaction_.html">&quot;UpdateExpressionAction&quot;</a>
+					<a href="../modules/updateexpressionaction.html">UpdateExpressionAction</a>
 				</li>
 				<li>
-					<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html">UpdateExpressionNumberSubtract</a>
+					<a href="updateexpressionaction.updateexpressionlistprepend.html">UpdateExpressionListPrepend</a>
 				</li>
 			</ul>
-			<h1>Interface UpdateExpressionNumberSubtract</h1>
+			<h1>Interface UpdateExpressionListPrepend</h1>
 		</div>
 	</div>
 </header>
@@ -70,7 +69,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Subtract from an existing numeric attribute.</p>
+						<p>Add elements to the beginning of an existing list.</p>
 					</div>
 				</div>
 			</section>
@@ -78,7 +77,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">UpdateExpressionNumberSubtract</span>
+						<span class="target">UpdateExpressionListPrepend</span>
 					</li>
 				</ul>
 			</section>
@@ -89,9 +88,9 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#action" class="tsd-kind-icon">action</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#attribute" class="tsd-kind-icon">attribute</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#value" class="tsd-kind-icon">value</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="updateexpressionaction.updateexpressionlistprepend.html#action" class="tsd-kind-icon">action</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="updateexpressionaction.updateexpressionlistprepend.html#attribute" class="tsd-kind-icon">attribute</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="updateexpressionaction.updateexpressionlistprepend.html#values" class="tsd-kind-icon">values</a></li>
 							</ul>
 						</section>
 					</div>
@@ -102,10 +101,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="action" class="tsd-anchor"></a>
 					<h3>action</h3>
-					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"number_subtract"</span></div>
+					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;list_prepend&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/UpdateExpressionAction.ts#L115">UpdateExpressionAction.ts:115</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/UpdateExpressionAction.ts#L157">UpdateExpressionAction.ts:157</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/UpdateExpressionAction.ts#L124">UpdateExpressionAction.ts:124</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/UpdateExpressionAction.ts#L166">UpdateExpressionAction.ts:166</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -133,17 +132,17 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="value" class="tsd-anchor"></a>
-					<h3>value</h3>
-					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<a name="values" class="tsd-anchor"></a>
+					<h3>values</h3>
+					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/UpdateExpressionAction.ts#L129">UpdateExpressionAction.ts:129</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/UpdateExpressionAction.ts#L171">UpdateExpressionAction.ts:171</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>The number to subtract.</p>
+							<p>An array of values to add.</p>
 						</div>
 					</div>
 				</section>
@@ -152,105 +151,105 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="../modules/condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="../modules/scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="../modules/tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="../modules/_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="../modules/updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="../modules/batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="../modules/concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="../modules/dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_index_.html">&quot;index&quot;</a>
+						<a href="../modules/index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="../modules/queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="../modules/requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="../modules/requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="../modules/responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="../modules/scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="../modules/_validation_.html">&quot;validation&quot;</a>
+						<a href="../modules/validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
+						<a href="updateexpressionaction.updateexpressionlistappend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
+						<a href="updateexpressionaction.updateexpressionlistprepend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#action" class="tsd-kind-icon">action</a>
+								<a href="updateexpressionaction.updateexpressionlistprepend.html#action" class="tsd-kind-icon">action</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#attribute" class="tsd-kind-icon">attribute</a>
+								<a href="updateexpressionaction.updateexpressionlistprepend.html#attribute" class="tsd-kind-icon">attribute</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#value" class="tsd-kind-icon">value</a>
+								<a href="updateexpressionaction.updateexpressionlistprepend.html#values" class="tsd-kind-icon">values</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionput.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
+						<a href="updateexpressionaction.updateexpressionlistremoveatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
+						<a href="updateexpressionaction.updateexpressionlistsetatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionremove.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
+						<a href="updateexpressionaction.updateexpressionnumberadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
+						<a href="updateexpressionaction.updateexpressionnumbersubtract.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module">
-						<a href="_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
+						<a href="updateexpressionaction.updateexpressionput.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="updateexpressionaction.updateexpressionputifnotexists.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="updateexpressionaction.updateexpressionremove.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="updateexpressionaction.updateexpressionsetadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
+						<a href="updateexpressionaction.updateexpressionsetdelete.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="../modules/_updateexpressionaction_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
+						<a href="../modules/updateexpressionaction.html#updateexpressionaction-1" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
 					</li>
 				</ul>
 			</nav>
