--- a/modules/batchhelper.html
+++ b/modules/batchhelper.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;batchHelper&quot; | Dynameh</title>
+	<title>batchHelper | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,13 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="_batchhelper_.html">&quot;batchHelper&quot;</a>
+					<a href="batchhelper.html">batchHelper</a>
 				</li>
 			</ul>
-			<h1>Module &quot;batchHelper&quot;</h1>
+			<h1>Module batchHelper</h1>
 		</div>
 	</div>
 </header>
@@ -71,19 +70,19 @@
 						<section class="tsd-index-section ">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_batchhelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_batchhelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_batchhelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_batchhelper_.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_batchhelper_.html#batchwritelimit" class="tsd-kind-icon">batch<wbr>Write<wbr>Limit</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="batchhelper.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="batchhelper.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="batchhelper.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="batchhelper.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="batchhelper.html#batchwritelimit" class="tsd-kind-icon">batch<wbr>Write<wbr>Limit</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_batchhelper_.html#batchgetall" class="tsd-kind-icon">batch<wbr>Get<wbr>All</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_batchhelper_.html#batchwriteall" class="tsd-kind-icon">batch<wbr>Write<wbr>All</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_batchhelper_.html#configure" class="tsd-kind-icon">configure</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="batchhelper.html#batchgetall" class="tsd-kind-icon">batch<wbr>Get<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="batchhelper.html#batchwriteall" class="tsd-kind-icon">batch<wbr>Write<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="batchhelper.html#configure" class="tsd-kind-icon">configure</a></li>
 							</ul>
 						</section>
 					</div>
@@ -97,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L29">batchHelper.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L29">batchHelper.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -114,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 1000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -129,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 30000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -144,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Get<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">100</span><span class="tsd-signature-symbol"> = 100</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -159,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Write<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> = 25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -175,13 +174,13 @@
 					<a name="batchgetall" class="tsd-anchor"></a>
 					<h3>batch<wbr>Get<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">batch<wbr>Get<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, batchGetInput<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BatchGetItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">batch<wbr>Get<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, batchGetInput<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.BatchGetItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L59">batchHelper.ts:59</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L59">batchHelper.ts:59</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,10 +192,10 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 								</li>
 								<li>
-									<h5>batchGetInput: <span class="tsd-signature-type">BatchGetItemInput</span></h5>
+									<h5>batchGetInput: <span class="tsd-signature-type">aws.DynamoDB.BatchGetItemInput</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -208,13 +207,13 @@
 					<a name="batchwriteall" class="tsd-anchor"></a>
 					<h3>batch<wbr>Write<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">batch<wbr>Write<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, batchPutInput<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BatchWriteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">batch<wbr>Write<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, batchPutInput<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.BatchWriteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L103">batchHelper.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L103">batchHelper.ts:103</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,10 +225,10 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 								</li>
 								<li>
-									<h5>batchPutInput: <span class="tsd-signature-type">BatchWriteItemInput</span></h5>
+									<h5>batchPutInput: <span class="tsd-signature-type">aws.DynamoDB.BatchWriteItemInput</span></h5>
 									<div class="tsd-comment tsd-typography">
 									</div>
 								</li>
@@ -248,7 +247,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/batchHelper.ts#L36">batchHelper.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/batchHelper.ts#L36">batchHelper.ts:36</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -286,78 +285,78 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_index_.html">&quot;index&quot;</a>
+						<a href="index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_validation_.html">&quot;validation&quot;</a>
+						<a href="validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_batchhelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a>
+						<a href="batchhelper.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_batchhelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
+						<a href="batchhelper.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_batchhelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
+						<a href="batchhelper.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_batchhelper_.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a>
+						<a href="batchhelper.html#batchgetlimit" class="tsd-kind-icon">batch<wbr>Get<wbr>Limit</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_batchhelper_.html#batchwritelimit" class="tsd-kind-icon">batch<wbr>Write<wbr>Limit</a>
+						<a href="batchhelper.html#batchwritelimit" class="tsd-kind-icon">batch<wbr>Write<wbr>Limit</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_batchhelper_.html#batchgetall" class="tsd-kind-icon">batch<wbr>Get<wbr>All</a>
+						<a href="batchhelper.html#batchgetall" class="tsd-kind-icon">batch<wbr>Get<wbr>All</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_batchhelper_.html#batchwriteall" class="tsd-kind-icon">batch<wbr>Write<wbr>All</a>
+						<a href="batchhelper.html#batchwriteall" class="tsd-kind-icon">batch<wbr>Write<wbr>All</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_batchhelper_.html#configure" class="tsd-kind-icon">configure</a>
+						<a href="batchhelper.html#configure" class="tsd-kind-icon">configure</a>
 					</li>
 				</ul>
 			</nav>
