--- a/modules/concurrenthelper.html
+++ b/modules/concurrenthelper.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;concurrentHelper&quot; | Dynameh</title>
+	<title>concurrentHelper | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,13 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="_concurrenthelper_.html">&quot;concurrentHelper&quot;</a>
+					<a href="concurrenthelper.html">concurrentHelper</a>
 				</li>
 			</ul>
-			<h1>Module &quot;concurrentHelper&quot;</h1>
+			<h1>Module concurrentHelper</h1>
 		</div>
 	</div>
 </header>
@@ -71,17 +70,17 @@
 						<section class="tsd-index-section ">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_concurrenthelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_concurrenthelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_concurrenthelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
-								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="_concurrenthelper_.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="concurrenthelper.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="concurrenthelper.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="concurrenthelper.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-module"><a href="concurrenthelper.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_concurrenthelper_.html#concurrentputall" class="tsd-kind-icon">concurrent<wbr>Put<wbr>All</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_concurrenthelper_.html#configure" class="tsd-kind-icon">configure</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="concurrenthelper.html#concurrentputall" class="tsd-kind-icon">concurrent<wbr>Put<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="concurrenthelper.html#configure" class="tsd-kind-icon">configure</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,10 +91,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-module">
 					<a name="backofffactor" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Factor</h3>
-					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 2</span></div>
+					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 2.0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -110,7 +109,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 2000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 60000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +139,7 @@
 					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 20</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -156,13 +155,13 @@
 					<a name="concurrentputall" class="tsd-anchor"></a>
 					<h3>concurrent<wbr>Put<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">concurrent<wbr>Put<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, putInputs<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">; </span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">concurrent<wbr>Put<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, putInputs<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.PutItemInput</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">; </span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.PutItemInput</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L56">concurrentHelper.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L56">concurrentHelper.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -175,13 +174,13 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 								</li>
 								<li>
-									<h5>putInputs: <span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>putInputs: <span class="tsd-signature-type">aws.DynamoDB.PutItemInput</span><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">; </span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Error</span><span class="tsd-signature-symbol">; </span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.PutItemInput</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></h4>
 							<p>A Promise of an array of objects of errors with the corresponding input.</p>
 						</li>
 					</ul>
@@ -196,7 +195,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/concurrentHelper.ts#L28">concurrentHelper.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/concurrentHelper.ts#L28">concurrentHelper.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -237,72 +236,72 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_index_.html">&quot;index&quot;</a>
+						<a href="index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_validation_.html">&quot;validation&quot;</a>
+						<a href="validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a>
+						<a href="concurrenthelper.html#backofffactor" class="tsd-kind-icon">backoff<wbr>Factor</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
+						<a href="concurrenthelper.html#backoffinitial" class="tsd-kind-icon">backoff<wbr>Initial</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
+						<a href="concurrenthelper.html#backoffmax" class="tsd-kind-icon">backoff<wbr>Max</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a>
+						<a href="concurrenthelper.html#concurrentfactor" class="tsd-kind-icon">concurrent<wbr>Factor</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#concurrentputall" class="tsd-kind-icon">concurrent<wbr>Put<wbr>All</a>
+						<a href="concurrenthelper.html#concurrentputall" class="tsd-kind-icon">concurrent<wbr>Put<wbr>All</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_concurrenthelper_.html#configure" class="tsd-kind-icon">configure</a>
+						<a href="concurrenthelper.html#configure" class="tsd-kind-icon">configure</a>
 					</li>
 				</ul>
 			</nav>
