--- a/modules/queryhelper.html
+++ b/modules/queryhelper.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;queryHelper&quot; | Dynameh</title>
+	<title>queryHelper | Dynameh</title>
 	<meta name="description" content="Documentation for Dynameh">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
+	<script async src="../assets/js/search.js" id="search-script"></script>
 </head>
 <body>
 <header>
@@ -38,8 +39,6 @@
 							</div>
 							<input type="checkbox" id="tsd-filter-inherited" checked />
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-							<input type="checkbox" id="tsd-filter-externals" checked />
-							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -51,13 +50,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../globals.html">Globals</a>
+					<a href="../modules.html">Dynameh</a>
 				</li>
 				<li>
-					<a href="_queryhelper_.html">&quot;queryHelper&quot;</a>
+					<a href="queryhelper.html">queryHelper</a>
 				</li>
 			</ul>
-			<h1>Module &quot;queryHelper&quot;</h1>
+			<h1>Module queryHelper</h1>
 		</div>
 	</div>
 </header>
@@ -71,9 +70,9 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_queryhelper_.html#queryall" class="tsd-kind-icon">query<wbr>All</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_queryhelper_.html#querybycallback" class="tsd-kind-icon">query<wbr>ByCallback</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_queryhelper_.html#querycountall" class="tsd-kind-icon">query<wbr>Count<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="queryhelper.html#queryall" class="tsd-kind-icon">query<wbr>All</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="queryhelper.html#querybycallback" class="tsd-kind-icon">query<wbr>ByCallback</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="queryhelper.html#querycountall" class="tsd-kind-icon">query<wbr>Count<wbr>All</a></li>
 							</ul>
 						</section>
 					</div>
@@ -85,31 +84,31 @@
 					<a name="queryall" class="tsd-anchor"></a>
 					<h3>query<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">query<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">QueryInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">query<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.QueryInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/queryHelper.ts#L12">queryHelper.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/queryHelper.ts#L12">queryHelper.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Paginate through a query to collect all results.</p>
 								</div>
-								<p>For large results this can use significantly <em>more</em> memory than <a href="_queryhelper_.html#querybycallback">queryByCallback</a>.</p>
+								<p>For large results this can use significantly <em>more</em> memory than <a href="queryhelper.html#querybycallback">queryByCallback</a>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The DynamoDB client instance to use.</p>
 									</div>
 								</li>
 								<li>
-									<h5>req: <span class="tsd-signature-type">QueryInput</span></h5>
+									<h5>req: <span class="tsd-signature-type">aws.DynamoDB.QueryInput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The query input.</p>
 									</div>
@@ -123,13 +122,13 @@
 					<a name="querybycallback" class="tsd-anchor"></a>
 					<h3>query<wbr>ByCallback</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">query<wbr>ByCallback<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">QueryInput</span>, callback<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">query<wbr>ByCallback<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.QueryInput</span>, callback<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/queryHelper.ts#L37">queryHelper.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/queryHelper.ts#L37">queryHelper.ts:37</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -138,18 +137,18 @@
 										Pagination can be aborted by returning <code>false</code> (or a Promise that
 									resolves to <code>false</code>) from the callback.</p>
 								</div>
-								<p>For large results this can use significantly <em>less</em> memory than <a href="_queryhelper_.html#queryall">queryAll</a>.</p>
+								<p>For large results this can use significantly <em>less</em> memory than <a href="queryhelper.html#queryall">queryAll</a>.</p>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The DynamoDB client instance to use.</p>
 									</div>
 								</li>
 								<li>
-									<h5>req: <span class="tsd-signature-type">QueryInput</span></h5>
+									<h5>req: <span class="tsd-signature-type">aws.DynamoDB.QueryInput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The query input.</p>
 									</div>
@@ -188,31 +187,31 @@
 					<a name="querycountall" class="tsd-anchor"></a>
 					<h3>query<wbr>Count<wbr>All</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">query<wbr>Count<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">QueryInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">query<wbr>Count<wbr>All<span class="tsd-signature-symbol">(</span>dynamodb<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB</span>, req<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.QueryInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/55856e6/src/queryHelper.ts#L61">queryHelper.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/pushplay/dynameh/blob/fbfa563/src/queryHelper.ts#L61">queryHelper.ts:61</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Paginate through a query to count all results.  This is more efficient than <a href="_queryhelper_.html#queryall">queryAll</a>
+									<p>Paginate through a query to count all results.  This is more efficient than <a href="queryhelper.html#queryall">queryAll</a>
 									when only the count is needed.</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>dynamodb: <span class="tsd-signature-type">DynamoDB</span></h5>
+									<h5>dynamodb: <span class="tsd-signature-type">aws.DynamoDB</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The DynamoDB client instance to use.</p>
 									</div>
 								</li>
 								<li>
-									<h5>req: <span class="tsd-signature-type">QueryInput</span></h5>
+									<h5>req: <span class="tsd-signature-type">aws.DynamoDB.QueryInput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The query input.</p>
 									</div>
@@ -227,63 +226,63 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
-						<a href="../globals.html"><em>Globals</em></a>
+					<li class=" ">
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_condition_.html">&quot;<wbr>Condition&quot;</a>
+						<a href="condition.html">Condition</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scopeddynameh_.html">&quot;<wbr>Scoped<wbr>Dynameh&quot;</a>
+						<a href="scopeddynameh.html">Scoped<wbr>Dynameh</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_tableschema_.html">&quot;<wbr>Table<wbr>Schema&quot;</a>
+						<a href="tableschema.html">Table<wbr>Schema</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_updateexpressionaction_.html">&quot;<wbr>Update<wbr>Expression<wbr>Action&quot;</a>
+						<a href="updateexpressionaction.html">Update<wbr>Expression<wbr>Action</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_batchhelper_.html">&quot;batch<wbr>Helper&quot;</a>
+						<a href="batchhelper.html">batch<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_concurrenthelper_.html">&quot;concurrent<wbr>Helper&quot;</a>
+						<a href="concurrenthelper.html">concurrent<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_dynamodbreservedwords_.html">&quot;dynamo<wbr>DbReserved<wbr>Words&quot;</a>
+						<a href="dynamodbreservedwords.html">dynamo<wbr>DbReserved<wbr>Words</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_index_.html">&quot;index&quot;</a>
+						<a href="index.html">index</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="_queryhelper_.html">&quot;query<wbr>Helper&quot;</a>
+						<a href="queryhelper.html">query<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestbuilder_.html">&quot;request<wbr>Builder&quot;</a>
+						<a href="requestbuilder.html">request<wbr>Builder</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_requestunwrapper_.html">&quot;request<wbr>Unwrapper&quot;</a>
+						<a href="requestunwrapper.html">request<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_responseunwrapper_.html">&quot;response<wbr>Unwrapper&quot;</a>
+						<a href="responseunwrapper.html">response<wbr>Unwrapper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_scanhelper_.html">&quot;scan<wbr>Helper&quot;</a>
+						<a href="scanhelper.html">scan<wbr>Helper</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_validation_.html">&quot;validation&quot;</a>
+						<a href="validation.html">validation</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_queryhelper_.html#queryall" class="tsd-kind-icon">query<wbr>All</a>
+						<a href="queryhelper.html#queryall" class="tsd-kind-icon">query<wbr>All</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_queryhelper_.html#querybycallback" class="tsd-kind-icon">query<wbr>ByCallback</a>
+						<a href="queryhelper.html#querybycallback" class="tsd-kind-icon">query<wbr>ByCallback</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_queryhelper_.html#querycountall" class="tsd-kind-icon">query<wbr>Count<wbr>All</a>
+						<a href="queryhelper.html#querycountall" class="tsd-kind-icon">query<wbr>Count<wbr>All</a>
 					</li>
 				</ul>
 			</nav>
